--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <!-- PON UN FAVICON!!! -->
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml"
+      href="./assets/images/wordle-favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CAMBIA EL TITLE!!! -->
-    <title>Vite Template</title>
+    <title>Wordle Clone</title>
   </head>
   <body>
+    <main class="main">
+      <h1 class="title">WORDLE</h1>
+      <div id="game-board" class="game-board"></div>
+      <form id="user-word-form" autocomplete="off">
+        <input id="input" type="text" name="word" class="input"
+          placeholder="type your solution">
+      </form>
+      <button id="restart" class="restart">Restart Game</button>
+    </main>
+
+    <div id="pop-up" class="pop-up"></div>
+
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
