--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <input id="input" type="text" name="word" class="input input__title"
           placeholder="Introduce la palabra">
       </form>
-      <button id="restart" class="restart">Restart Game</button>
+      <button id="restart" class="restart">Reiniciar partida</button>
     </main>
 
     <div id="pop-up" class="pop-up"></div>
